<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp">

        <Button
                android:text="@string/api_waiting_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/apiWaitingButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:text="@string/api_background_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/apiBackgroundButton"
                app:layout_constraintTop_toBottomOf="@+id/apiWaitingButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone" />

        <Button
                android:text="@string/in_app_gen_waiting_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inAppGenWaitingButton"
                app:layout_constraintTop_toBottomOf="@+id/apiBackgroundButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:text="@string/load_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/skipGeneratingButton"
                app:layout_constraintTop_toBottomOf="@+id/inAppGenWaitingButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:enabled="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="TransportAPIApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameAppLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/mainMenuLayout" />

    <TextView
            android:text="Menu główne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mainActivityLabel"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mainMenuLayout"
            android:textSize="20sp" />
</androidx.constraintlayout.widget.ConstraintLayout>