<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ApiGeneratorActivity">

    <TextView
            android:text="@string/press_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apiInfoTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apiStartButton"
            android:text="@string/start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apiProgressBar" />

    <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/apiProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/apiInfoTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:max="100"
            android:progress="0" />

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apiNextButton"
            app:layout_constraintTop_toBottomOf="@+id/apiStartButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false" />

    <TextView
            android:text="Tutaj pojawią się końcowe informacje"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/apiFinalResultTextView"
            app:layout_constraintTop_toBottomOf="@+id/apiNextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>