<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InAppGeneratorActivity">

    <TextView
            android:text="@string/press_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inAppInfoTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.474" />

    <Button
            android:text="@string/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inAppStartButton"
            app:layout_constraintTop_toBottomOf="@+id/inAppProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/inAppProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/inAppInfoTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:max="100"
            android:progress="0" />

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inAppNextButton"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/inAppStartButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="Tutaj pojawią się końcowe informacje"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inAppFinalResultTextView"
            app:layout_constraintTop_toBottomOf="@+id/inAppNextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>